<resources>
    <string name="app_name">LibreOffice Viewer</string>
    <string name="app_name_settings">LibreOffice Viewer Settings</string>
    <string name="app_about_name"><b>LibreOffice Viewer \'Beta\'</b></string>
    <string name="app_version">Version: %1$s\nBuild ID: %2$s</string>
    <string name="app_description">LibreOffice Viewer is a document viewer based on LibreOffice.</string>
    <string name="app_credits">https://www.libreoffice.org</string>
    <string name="app_vendor">This release was supplied by $VENDOR.</string>
    <string name="temp_file_saving_disabled">This file is read-only, saving is disabled.</string>
    <string name="about_license">Show License</string>
    <string name="about_notice">Show Notice</string>
    <string name="about_moreinfo">More Info</string>
    <string name="back_again_to_quit">Press back again to quit</string>
    <string name="new_textdocument">New Text Document</string>
    <string name="new_presentation">New Presentation</string>
    <string name="new_spreadsheet">New Spreadsheet</string>
    <string name="new_drawing">New Drawing</string>
    <string name="default_document_name">untitled</string>
    <string name="browser_app_name">LibreOffice Browser</string>
    <string name="menu_search">Search</string>
    <string name="list_view">List</string>
    <string name="grid_view">Grid</string>
    <string name="filter">Filter by</string>
    <string name="search_not_found">Keyword not found</string>
    <string name="sort">Sort by</string>
    <string name="sort_smallest">Smallest first</string>
    <string name="sort_largest">Largest first</string>
    <string name="sort_az">A-Z</string>
    <string name="sort_za">Z-A</string>
    <string name="sort_oldest">Oldest first</string>
    <string name="sort_newest">Newest first</string>
    <string name="menu_sort_size">Sort By Size</string>
    <string name="menu_sort_az">Sort A-Z</string>
    <string name="menu_sort_modified">Sort by Date</string>
    <string name="menu_preferences">Preferences</string>
    <string name="file_icon_desc">fileicon</string>
    <string name="title_recents">Recent files</string>
    <string name="title_browser">All files</string>
    <string name="EXPLORER_VIEW_TYPE_KEY">EXPLORER_VIEW_TYPE</string>
    <string name="CURRENT_DIRECTORY_KEY">CURRENT_DIRECTORY</string>
    <string name="pref_category_explorer">File Explorer Settings</string>
    <string name="pref_category_general">General</string>
    <string name="pref_experimental_editing">Experimental Mode</string>
    <string name="pref_experimental_editing_summary">Enable the experimental editing mode. Use at your own risk.</string>
    <string name="pref_show_hidden_files">Hidden Files/Folders</string>
    <string name="pref_show_hidden_files_summary">Enable to show hidden files/folders</string>
    <string name="pref_developer_mode">Developer Mode</string>
    <string name="pref_developer_mode_summary">Enable developer mode where you can send UNO commands within app. Use at your own risk.</string>
    <string name="action_about">About</string>
    <string name="action_parts">Parts</string>
    <string name="action_settings">Settings</string>
    <string name="open">Open</string>
    <string name="share">Share</string>
    <string name="share_via">Share via</string>
    <string name="filter_everything">Everything</string>
    <string name="filter_documents">Documents</string>
    <string name="filter_spreadsheets">Spreadsheets</string>
    <string name="filter_presentations">Presentations</string>
    <string name="filter_drawings">Drawings</string>
    <string name="document_locations">Document locations</string>
    <string name="close_document_locations">Close document locations</string>
    <string name="local_documents">Documents directory</string>
    <string name="local_file_system">Local file system</string>
    <string name="external_sd_file_system">External SD</string>
    <string name="otg_file_system">OTG device (experimental)</string>
    <string name="owncloud">Remote server</string>
    <string name="usb_connected_configure">USB connected, configure your device.</string>
    <string name="owncloud_wrong_connection">Cannot connect to ownCloud server. Check your configuration.</string>
    <string name="owncloud_unauthorized">Cannot log into ownCloud server. Check your configuration.</string>
    <string name="owncloud_unspecified_error">Unspecified error connecting to ownCloud server. Check your configuration and/or try later.</string>
    <string name="ext_document_provider_error">Invalid root file. Check your sd card configuration.</string>
    <string name="legacy_extsd_missing_error">Invalid root file. Check your external sd card and/or configuration.</string>
    <string name="otg_missing_error">Invalid root file. Check your OTG device and/or configuration.</string>
    <string name="action_bold">Bold</string>
    <string name="action_underline">Underline</string>
    <string name="action_italic">Italic</string>
    <string name="action_strikeout">Strike Out</string>
    <string name="action_keyboard">Show keyboard</string>
    <string name="action_save">Save</string>
    <string name="action_fromat">Enable Format</string>
    <string name="action_search">Search</string>
    <string name="action_UNO_commands">Send UNO Cmd</string>
    <string name="message_saved">Save complete</string>
    <string name="message_saving">Saving the document…</string>
    <string name="message_save_incomplete">Save incomplete. Were there any changes?</string>
    <string name="create_new_file_success">"Created new file - "</string>
    <string name="create_new_file_error">Unable to create new file, please check entered file name.</string>
    <string name="storage_provider_settings">Storage provider settings</string>
    <string name="owncloud_settings">ownCloud settings</string>
    <string name="physical_storage_settings">Physical storage settings</string>
    <string name="external_sd_path">External SD path</string>
    <string name="otg_device_path">OTG device path</string>
    <string name="otg_warning">Experimental Feature: Use only if OTG device is writable.</string>
    <string name="server_url">Server URL</string>
    <string name="server_url_and_port">URL and port of the ownCloud server.</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="action_undo">Undo</string>
    <string name="action_redo">Redo</string>
    <string name="up_description">To parent directory</string>
    <string name="confirm_label">Confirm</string>
    <string name="cancel_label">Cancel</string>
    <string name="search_label">Go</string>
    <string name="directory_browser_label">Choose Directory</string>
    <string name="bad_directory">Invalid directory path</string>
    <string name="current_dir">Current Directory: %1$s</string>
    <string name="save_alert_dialog_title">Save the document before closing?</string>
    <string name="save_document">SAVE</string>
    <string name="action_cancel">Cancel</string>
    <string name="no_save_document">NO</string>
    <string name="create_new_document_title">Enter file name</string>
    <string name="action_create">CREATE</string>
    <string name="action_presentation">Slide show</string>
    <string name="action_add_slide">Add Slide</string>
    <string name="alert_copy_svg_slide_show_to_clipboard">Your Android device doesn\'t support in-app svg slideshow. We copied the slideshow link to clipboard. Please press home button, open a modern web browser, paste in the address bar, and go.</string>
    <string name="alert_copy_svg_slide_show_to_clipboard_dismiss">OK</string>
    <string name="slideshow_action_back">Back</string>
    <string name="calc_insert_before">Insert</string>
    <string name="calc_delete">Delete</string>
    <string name="calc_hide">Hide</string>
    <string name="calc_show">Show</string>
    <string name="calc_optimal_length">Optimal Length</string>
    <string name="calc_adjust_length">Adjust Length</string>
    <string name="calc_adjust_height">Adjust Height</string>
    <string name="calc_adjust_width">Adjust Width</string>
    <string name="calc_optimal_height">Optimal Height</string>
    <string name="calc_optimal_width">Optimal Width</string>
    <string name="calc_optimal_length_confirm">OK</string>
    <string name="calc_optimal_length_default_text">Enter Extra Length in 100th/mm</string>
    <string name="calc_alert_double_click_optimal_length">Hint: Double tap on a header sets optimal width/height.</string>
    <string name="action_add_worksheet">Add Worksheet</string>
    <string name="action_pwd_dialog_OK">OK</string>
    <string name="action_pwd_dialog_cancel">Cancel</string>
    <string name="action_pwd_dialog_title">Please enter password</string>
    <string name="take_photo">Take Photo</string>
    <string name="select_photo">Select Photo</string>
    <string name="select_photo_title">Select Picture</string>
    <string name="no_camera_found">No Camera Found</string>
    <string name="compress_photo_smallest_size">Smallest Size</string>
    <string name="compress_photo_medium_size">Medium Size</string>
    <string name="compress_photo_max_quality">Max Quality</string>
    <string name="compress_photo_no_compress">Don\'t Compress</string>
    <string name="compress_photo_title">Do you want to compress the photo?</string>
    <string name="action_copy">Copy</string>
    <string name="action_paste">Paste</string>
    <string name="action_cut">Cut</string>
    <string name="action_back">Back</string>
    <string name="action_text_copied">Text copied to the clipboard</string>
    <string name="insert_table">Insert table</string>
    <string name="select_insert_options">Select insert options:</string>
    <string name="select_delete_options">Select delete options:</string>
    <string name="action_rename_worksheet">Rename worksheet</string>
    <string name="action_delete_worksheet">Delete worksheet</string>
    <string name="action_delete_slide">Delete slide</string>
    <string name="name_already_used">Given name is already being used.</string>
    <string name="part_name_changed">Part name has been changed.</string>
    <string name="part_deleted">Part has been deleted.</string>
    <string-array name="insertrowscolumns">
        <item>Insert Rows Before</item>
        <item>Insert Rows After</item>
        <item>Insert Columns Before</item>
        <item>Insert Columns After</item>
        <item>Insert Table</item>
    </string-array>
    <string-array name="deleterowcolumns">
        <item>Delete Rows</item>
        <item>Delete Columns</item>
        <item>Delete Table</item>
    </string-array>
    <string name="UNO_commands_string_hint">UNO Command</string>
    <string name="UNO_commands_string_type_hint">Type</string>
    <string name="UNO_commands_string_value_hint">Value</string>
    <string name="UNO_commands_string_parent_value_hint">Parent Value</string>
    <string name="action_exportToPDF">Export To PDF</string>
    <string name="action_print">Print</string>
    <string name="tabhost_character">Character</string>
    <string name="tabhost_paragraph">Paragraph</string>
    <string name="tabhost_insert">Insert</string>
    <string name="tabhost_style">Style</string>
    <string name="alert_ok">OK</string>
    <string name="alert_cancel">Cancel</string>
    <string name="unable_to_go_further">Unable to go further.</string>
    <string name="current_uno_command">Current UNO command</string>
    <string name="pref_sort_summary">Select how to order files: A-Z, by size or by date.</string>
    <string name="pref_viewmode_summary">View files as a grid or in a list.</string>
    <string name="pref_file_explorer_title">File explorer layout</string>
    <string name="pref_sort_title">File Order</string>
    <string name="pref_filter_title">Default File Filter</string>
    <string name="action_rename_slide">Rename Slide</string>
</resources>