<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_filter"
        android:title="@string/filter"
        android:icon="@drawable/ic_filter_list_black_24dp"
        app:showAsAction="ifRoom">
        <menu>
            <group
                android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_filter_everything"
                    android:title="@string/filter_everything" />
                <item
                    android:id="@+id/menu_filter_documents"
                    android:title="@string/filter_documents" />
                <item
                    android:id="@+id/menu_filter_spreadsheets"
                    android:title="@string/filter_spreadsheets" />
                <item
                    android:id="@+id/menu_filter_presentations"
                    android:title="@string/filter_presentations" />
                <item
                    android:id="@+id/menu_filter_drawings"
                    android:title="@string/filter_drawings" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/menu_sort"
        android:title="@string/sort"
        android:icon="@drawable/ic_sort_black_24dp"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/menu_sort_size_asc"
                    android:title="@string/sort_smallest" />

                <item android:id="@+id/menu_sort_size_desc"
                    android:title="@string/sort_largest" />

                <item android:id="@+id/menu_sort_az"
                    android:title="@string/sort_az"/>

                <item android:id="@+id/menu_sort_za"
                    android:title="@string/sort_za"/>

                <item android:id="@+id/menu_sort_modified_newest"
                    android:title="@string/sort_newest"/>

                <item android:id="@+id/menu_sort_modified_oldest"
                    android:title="@string/sort_oldest"/>
            </group>
        </menu>
    </item>
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"/>
    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="100"/>
</menu>
