<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.libreoffice.MainActivity">

    <group android:id="@+id/group_edit_actions"
           tools:visible="true"
           android:visible="false">

        <item android:id="@+id/action_undo"
              android:title="@string/action_undo"
              android:icon="@drawable/ic_undo"
              android:orderInCategory="100"
              app:showAsAction="always"/>

        <item android:id="@+id/action_redo"
              android:title="@string/action_redo"
              android:icon="@drawable/ic_redo"
              android:orderInCategory="100"
              app:showAsAction="always"/>

        <item android:id="@+id/action_keyboard"
              android:title="@string/action_keyboard"
              android:icon="@drawable/ic_keyboard"
              android:orderInCategory="100"
              app:showAsAction="always"/>

        <item android:id="@+id/action_format"
            android:title="@string/action_fromat"
            android:icon="@drawable/ic_text_format"
            android:orderInCategory="100"
            app:showAsAction="always"/>


        <item android:id="@+id/action_save"
            android:title="@string/action_save"
            android:orderInCategory="100" />

        <item android:id="@+id/action_save_as"
            android:title="@string/action_save_as"
            android:orderInCategory="100" />

        <item android:id="@+id/action_exportToPDF"
            android:title="@string/action_exportToPDF"
            android:orderInCategory="100"
            android:visible="true"
            />

        <item android:id="@+id/action_print"
            android:title="@string/action_print"
            android:orderInCategory="100"
            android:visible="true" />

        <item android:id="@+id/action_UNO_commands"
            android:title="@string/action_UNO_commands"
            android:orderInCategory="100" />
    </group>

    <group android:id="@+id/group_spreadsheet_options"
        android:visible="false"
        tools:visible="true">

        <item android:id="@+id/action_add_worksheet"
            android:title="@string/action_add_worksheet"
            android:orderInCategory="100"
            android:visible="false" />

        <item android:id="@+id/action_rename_worksheet"
            android:title="@string/action_rename_worksheet"
            android:orderInCategory="100"
            android:visible="false" />

        <item android:id="@+id/action_delete_worksheet"
            android:title="@string/action_delete_worksheet"
            android:orderInCategory="100"
            android:visible="false"/>
    </group>

    <group android:id="@+id/group_presentation_options"
        android:visible="false"
        tools:visible="true">

        <item android:id="@+id/action_add_slide"
            android:title="@string/action_add_slide"
            android:orderInCategory="100"
            android:visible="false" />
        <item android:id="@+id/action_rename_slide"
            android:title="@string/action_rename_slide"
            android:orderInCategory="100"
            android:visible="false" />

        <item android:id="@+id/action_delete_slide"
            android:title="@string/action_delete_slide"
            android:orderInCategory="100"
            android:visible="false"/>
    </group>

    <group android:id="@+id/group_edit_clipboard"
        android:visible="false"
        tools:visible="true">

        <item android:id="@+id/action_back"
            android:title="@string/action_back"
            app:showAsAction="always"
            android:icon="@drawable/ic_arrow_back_black_24dp"
            android:orderInCategory="1"/>

        <item android:id="@+id/action_copy"
            android:title="@string/action_copy"
            app:showAsAction="always"
            android:icon="@drawable/ic_content_copy_black_24dp"
            android:orderInCategory="2"/>

        <item android:id="@+id/action_cut"
            android:title="@string/action_cut"
            app:showAsAction="always"
            android:icon="@drawable/ic_content_cut_black_24dp"
            android:orderInCategory="3"/>

        <item android:id="@+id/action_paste"
            android:title="@string/action_paste"
            app:showAsAction="always"
            android:icon="@drawable/ic_content_paste_black_24dp"
            android:orderInCategory="4"/>

    </group>

    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="100"
        app:showAsAction="always"/>

    <item android:id="@+id/action_presentation"
        android:title="@string/action_presentation"
        android:orderInCategory="100"
        android:visible="false" />

    <item android:id="@+id/action_parts"
          android:title="@string/action_parts"
          android:orderInCategory="100" />

    <item android:id="@+id/action_about"
          android:title="@string/action_about"
          android:orderInCategory="100" />

    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100" />
</menu>
