<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single"
        android:id="@+id/group_providers">

        <item android:id="@+id/menu_provider_documents"
            android:title="@string/local_documents"
            android:icon="@drawable/ic_folder_black_24dp" />

        <item android:id="@+id/menu_provider_filesystem"
            android:title="@string/local_file_system"
            android:icon="@drawable/ic_storage_black_24dp"/>

        <item android:id="@+id/menu_provider_extsd"
            android:title="@string/external_sd_file_system"
            android:icon="@drawable/ic_sd_card_black_24dp"/>

        <item android:id="@+id/menu_provider_otg"
            android:title="@string/otg_file_system"
            android:icon="@drawable/ic_usb_black_24dp"/>

        <item android:id="@+id/menu_system_file_dialog"
            android:title="@string/system_file_selector"
            android:icon="@drawable/ic_folder_black_24dp" />

    </group>

    <group android:orderInCategory="100">
        <item android:id="@+id/menu_storage_preferences"
            android:title="@string/storage_provider_settings"
            android:icon="@drawable/ic_settings_black_24dp"/>
    </group>
</menu>
