<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/doorhanger_background_dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/calc_header_popup_insert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/calc_insert_before"/>

            <Button
                android:id="@+id/calc_header_popup_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/calc_delete"/>

            <Button
                android:id="@+id/calc_header_popup_hide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/calc_hide"/>

            <Button
                android:id="@+id/calc_header_popup_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/calc_show"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/calc_header_popup_optimal_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/calc_optimal_length"/>

            <Button
                android:id="@+id/calc_header_popup_adjust_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/calc_adjust_length"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/calc_header_popup_optimal_length_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <EditText
                android:id="@+id/calc_header_popup_optimal_length_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/calc_optimal_length_default_text"/>

            <Button
                android:id="@+id/calc_header_popup_optimal_length_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/calc_optimal_length_confirm"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>