<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:padding="20dip">

    <TextView
        android:id="@+id/about_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:textSize="18sp"
        tools:text="Version: x.x.x.x\nBuild ID: 000000000000" />

    <TextView
        android:id="@+id/about_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_description"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/about_credits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:paddingBottom="20dip"
        android:paddingTop="20dip"
        android:text="@string/app_credits"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/about_vendor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:textSize="18sp"
        tools:text="@string/app_vendor" />
</LinearLayout>
</ScrollView>
