<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:id="@+id/browser_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/up_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_menu_back"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:contentDescription="@string/up_description"/>

        <EditText
            android:id="@+id/directory_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:scrollHorizontally="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:inputType="text"/>

        <Button
            android:id="@+id/directory_search_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/search_label"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/browser_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/cancel_button"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/cancel_label"/>

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirm_label"/>
    </LinearLayout>

    <ListView
        android:id="@+id/directory_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/browser_header"
        android:layout_above="@id/browser_footer">
    </ListView>


</RelativeLayout>